# scootbot3.0

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements-dev.in  requirements.txt  tox.ini
.github/workflows/: main.yaml  pr.yaml
src/scootbot3/: __init__.py  _version.py  app.py  client.py  handlers.py  listener.py
src/scootbot3/commands/: dotabuff.py  echo.py  pickone.py  sayhi.py
src/scootbot3/constants/: steam.py
src/scootbot3/util/: user.py
src/scootbot3/util/dota/: heroes.py  match.py
tests/: conftest.py  test_app.py  test_commands.py  test_listener.py  test_user.py  test_version.py
