[project]
name = "scootbot3"
dynamic = ["version"]
dependencies = []

[project.scripts]
scootbot3 = "scootbot3.app:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 65.4.0",
    "setuptools_scm[toml] >= 7.0.5",
]

[tool.setuptools_scm]
root = "."

[tool.setuptools.packages.find]
where = ["src"]
include = ["scootbot3*"]
namespaces = false

[tool.ruff]
line-length = 88
select = [
    "E",
    "F",
    "W",
    "I",
]

[tool.mypy]
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module = "scootbot3._version"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --doctest-glob='*md' --doctest-continue-on-failure"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
